2005-05-09  Dennis Cranston <dennis_cranston@yahoo.com>

	* Makefile.am:  Added gnome-desktop cflags and libs.
	* applet.c:  (gnome_volume_applet_run_mixer):  Use
	startup notification by launching gnome-volume-control 
	using the gnome-desktop-item api.

2005-05-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (select_track), (select_element_and_track), (cb_gconf):
	  Always select a channels-containing track on element switch, so
	  that we don't crash without reason when selecting another device
	  in the preferences if that device has num_channels=0 in its first
	  track (should fix #168040).

2005-05-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (cb_volume), (cb_gconf):
	  Cache volume. Only reset element if it's not the one we were
	  already using. May fix warnings on console when opening
	  preferences, although I didn't get confirmation on that.

2005-04-15  Kjartan Maraas  <kmaraas@gnome.org>

	* load.c: (create_mixer_collection): Leak fixes
	* preferences.c: (gnome_volume_applet_preferences_change),
	(cb_track_select): Leak fixes. Closes bug #300718.

2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_toggle_mute),
	(gnome_volume_applet_refresh), (cb_ui_event):
	  Fix for mute misbehaviour.

2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_init),
	(gnome_volume_applet_refresh):
	* applet.h:
	  Display tooltip showing current volume, based on a patch from
	  Pedro Villavicencio <pvillavi@gnome.org> (#166914).

2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_setup):
	  Some include fixes.
	* preferences.c: (gnome_volume_applet_preferences_init):
	  Fix type-ahead bug (#171367).

2005-03-29  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: Use show/hide_all instead of show/hide for the
	drop-down slider.  Closes bug #168726.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>
