@@ -1,3 +1,8 @@
+2005-06-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* applet.c: (init_pixbufs), (gnome_volume_applet_run_mixer):
+	  Use gdk_pixbuf_flip() - #304329.
+
 2005-05-09  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* Makefile.am:  Added gnome-desktop cflags and libs.
